--- a/web/mta-times-app/package.json
+++ b/web/mta-times-app/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mantine/core": "^7.13.0",
+    "@mantine/dates": "^7.13.0",
+    "@mantine/form": "^7.13.0",
+    "@mantine/hooks": "^7.13.0",
     "csv": "^6.3.10",
     "csv-parse": "^5.5.6",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "gtfs-realtime-bindings": "^1.1.1",
     "next": "latest",
     "node-fetch": "^3.3.2",
