--- a/web/mta-times-app/.vscode/launch.json
+++ b/web/mta-times-app/.vscode/launch.json
@@ -2,6 +2,12 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "pwa-node",
+            "request": "launch",
+            "name": "Next: Node",
+            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/next"
+        },
+        {
             "name": "Attach",
             "port": 9229,
             "request": "attach",
