--- a/web/mta-times-app/tsconfig.json
+++ b/web/mta-times-app/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "sourceMap": true,
     "baseUrl": "./app",
     "allowJs": true,
     "skipLibCheck": true,
