--- a/web/mta-times-app/package.json
+++ b/web/mta-times-app/package.json
@@ -10,6 +10,7 @@
     "@mantine/dates": "^7.13.0",
     "@mantine/form": "^7.13.0",
     "@mantine/hooks": "^7.13.0",
+    "@prisma/client": "5.20.0",
     "csv": "^6.3.10",
     "csv-parse": "^5.5.6",
     "date-fns": "^3.6.0",
@@ -25,6 +26,7 @@
     "@types/node": "^18.0.3",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.0.6",
+    "prisma": "^5.20.0",
     "typescript": "^5.6.2"
   }
 }
