--- a/web/mta-times-app/package.json
+++ b/web/mta-times-app/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "prisma generate",
   },
   "dependencies": {
     "@mantine/core": "^7.13.0",
