--- a/web/mta-times-app/package.json
+++ b/web/mta-times-app/package.json
@@ -12,6 +12,7 @@
     "@mantine/form": "^7.13.0",
     "@mantine/hooks": "^7.13.0",
     "@prisma/client": "5.20.0",
+    "adm-zip": "^0.5.16",
     "csv": "^6.3.10",
     "csv-parse": "^5.5.6",
     "date-fns": "^3.6.0",
