--- a/web/mta-times-app/app/lib/staticGTFS/.gitattributes
+++ b/web/mta-times-app/app/lib/staticGTFS/.gitattributes
@@ -8,3 +8,4 @@ agency.txt filter=lfs diff=lfs merge=lfs -text
 calendar.txt filter=lfs diff=lfs merge=lfs -text
 calendar_dates.txt filter=lfs diff=lfs merge=lfs -text
 transfers.txt filter=lfs diff=lfs merge=lfs -text
+entrances.csv filter=lfs diff=lfs merge=lfs -text
